added random answer plugin

--- a/dotnet/notebooks/06-memory-and-embeddings.ipynb
+++ b/dotnet/notebooks/06-memory-and-embeddings.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -31,7 +31,17 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.SemanticKernel, 1.0.0-beta1</span></li><li><span>System.Linq.Async, 6.0.1</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#r \"nuget: Microsoft.SemanticKernel, 1.0.0-beta1\"\n",
     "#r \"nuget: System.Linq.Async, 6.0.1\"\n",
@@ -73,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -93,11 +103,11 @@
     "\n",
     "if (useAzureOpenAI)\n",
     "{\n",
-    "    memoryBuilder.WithAzureTextEmbeddingGenerationService(\"text-embedding-ada-002\", azureEndpoint, apiKey);\n",
+    "    memoryBuilder.WithAzureTextEmbeddingGenerationService(\"ada2-aueast\", azureEndpoint, apiKey);\n",
     "}\n",
     "else\n",
     "{\n",
-    "    memoryBuilder.WithOpenAITextEmbeddingGenerationService(\"text-embedding-ada-002\", apiKey);\n",
+    "    memoryBuilder.WithOpenAITextEmbeddingGenerationService(\"ada2-aueast\", apiKey);\n",
     "}\n",
     "\n",
     "memoryBuilder.WithMemoryStore(new VolatileMemoryStore());\n",
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -143,7 +153,60 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Microsoft.SemanticKernel.Diagnostics.HttpOperationException: The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\r\nStatus: 404 (Not Found)\r\nErrorCode: DeploymentNotFound\r\n\r\nContent:\r\n{\"error\":{\"code\":\"DeploymentNotFound\", \"message\":\"The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\"}}\r\n\r\nHeaders:\r\napim-request-id: REDACTED\r\nx-ms-client-request-id: 1c966a83-317b-4a2f-ad11-7c7fa778213e\r\nStrict-Transport-Security: REDACTED\r\nX-Content-Type-Options: REDACTED\r\nx-ms-region: REDACTED\r\nDate: Tue, 14 Nov 2023 21:37:26 GMT\r\nContent-Length: 198\r\nContent-Type: application/json\r\n\r\n ---> Azure.RequestFailedException: The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\r\nStatus: 404 (Not Found)\r\nErrorCode: DeploymentNotFound\r\n\r\nContent:\r\n{\"error\":{\"code\":\"DeploymentNotFound\", \"message\":\"The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\"}}\r\n\r\nHeaders:\r\napim-request-id: REDACTED\r\nx-ms-client-request-id: 1c966a83-317b-4a2f-ad11-7c7fa778213e\r\nStrict-Transport-Security: REDACTED\r\nX-Content-Type-Options: REDACTED\r\nx-ms-region: REDACTED\r\nDate: Tue, 14 Nov 2023 21:37:26 GMT\r\nContent-Length: 198\r\nContent-Type: application/json\r\n\r\n   at Azure.Core.HttpPipelineExtensions.ProcessMessageAsync(HttpPipeline pipeline, HttpMessage message, RequestContext requestContext, CancellationToken cancellationToken)\r\n   at Azure.AI.OpenAI.OpenAIClient.GetEmbeddingsAsync(String deploymentOrModelName, EmbeddingsOptions embeddingsOptions, CancellationToken cancellationToken)\r\n   at Microsoft.SemanticKernel.Connectors.AI.OpenAI.AzureSdk.ClientBase.RunRequestAsync[T](Func`1 request)\r\n   --- End of inner exception stack trace ---\r\n   at Microsoft.SemanticKernel.Connectors.AI.OpenAI.AzureSdk.ClientBase.RunRequestAsync[T](Func`1 request)\r\n   at Microsoft.SemanticKernel.Connectors.AI.OpenAI.AzureSdk.ClientBase.InternalGetEmbeddingsAsync(IList`1 data, CancellationToken cancellationToken)\r\n   at Microsoft.SemanticKernel.AI.Embeddings.EmbeddingGenerationExtensions.GenerateEmbeddingAsync[TValue,TEmbedding](IEmbeddingGeneration`2 generator, TValue value, CancellationToken cancellationToken)\r\n   at Microsoft.SemanticKernel.Memory.SemanticTextMemory.SaveInformationAsync(String collection, String text, String id, String description, String additionalMetadata, CancellationToken cancellationToken)\r\n   at Submission#9.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "Microsoft.SemanticKernel.Diagnostics.HttpOperationException: The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\r\n",
+      "Status: 404 (Not Found)\r\n",
+      "ErrorCode: DeploymentNotFound\r\n",
+      "\r\n",
+      "Content:\r\n",
+      "{\"error\":{\"code\":\"DeploymentNotFound\", \"message\":\"The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\"}}\r\n",
+      "\r\n",
+      "Headers:\r\n",
+      "apim-request-id: REDACTED\r\n",
+      "x-ms-client-request-id: 1c966a83-317b-4a2f-ad11-7c7fa778213e\r\n",
+      "Strict-Transport-Security: REDACTED\r\n",
+      "X-Content-Type-Options: REDACTED\r\n",
+      "x-ms-region: REDACTED\r\n",
+      "Date: Tue, 14 Nov 2023 21:37:26 GMT\r\n",
+      "Content-Length: 198\r\n",
+      "Content-Type: application/json\r\n",
+      "\r\n",
+      " ---> Azure.RequestFailedException: The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\r\n",
+      "Status: 404 (Not Found)\r\n",
+      "ErrorCode: DeploymentNotFound\r\n",
+      "\r\n",
+      "Content:\r\n",
+      "{\"error\":{\"code\":\"DeploymentNotFound\", \"message\":\"The API deployment for this resource does not exist. If you created the deployment within the last 5 minutes, please wait a moment and try again.\"}}\r\n",
+      "\r\n",
+      "Headers:\r\n",
+      "apim-request-id: REDACTED\r\n",
+      "x-ms-client-request-id: 1c966a83-317b-4a2f-ad11-7c7fa778213e\r\n",
+      "Strict-Transport-Security: REDACTED\r\n",
+      "X-Content-Type-Options: REDACTED\r\n",
+      "x-ms-region: REDACTED\r\n",
+      "Date: Tue, 14 Nov 2023 21:37:26 GMT\r\n",
+      "Content-Length: 198\r\n",
+      "Content-Type: application/json\r\n",
+      "\r\n",
+      "   at Azure.Core.HttpPipelineExtensions.ProcessMessageAsync(HttpPipeline pipeline, HttpMessage message, RequestContext requestContext, CancellationToken cancellationToken)\r\n",
+      "   at Azure.AI.OpenAI.OpenAIClient.GetEmbeddingsAsync(String deploymentOrModelName, EmbeddingsOptions embeddingsOptions, CancellationToken cancellationToken)\r\n",
+      "   at Microsoft.SemanticKernel.Connectors.AI.OpenAI.AzureSdk.ClientBase.RunRequestAsync[T](Func`1 request)\r\n",
+      "   --- End of inner exception stack trace ---\r\n",
+      "   at Microsoft.SemanticKernel.Connectors.AI.OpenAI.AzureSdk.ClientBase.RunRequestAsync[T](Func`1 request)\r\n",
+      "   at Microsoft.SemanticKernel.Connectors.AI.OpenAI.AzureSdk.ClientBase.InternalGetEmbeddingsAsync(IList`1 data, CancellationToken cancellationToken)\r\n",
+      "   at Microsoft.SemanticKernel.AI.Embeddings.EmbeddingGenerationExtensions.GenerateEmbeddingAsync[TValue,TEmbedding](IEmbeddingGeneration`2 generator, TValue value, CancellationToken cancellationToken)\r\n",
+      "   at Microsoft.SemanticKernel.Memory.SemanticTextMemory.SaveInformationAsync(String collection, String text, String id, String description, String additionalMetadata, CancellationToken cancellationToken)\r\n",
+      "   at Submission#9.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
    "source": [
     "const string MemoryCollectionName = \"aboutMe\";\n",
     "\n",
@@ -533,6 +596,22 @@
     "Now you might be wondering what happens if you have so much data that it doesn't fit into your RAM? That's where you want to make use of an external Vector Database made specifically for storing and retrieving embeddings.\n",
     "\n",
     "Stay tuned for that!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!set --value @csharp:memory --name memory\n"
    ]
   }
  ],
